<resources>
    <string name="app_name">Groovy Mobile Payments</string>

    <!-- Common -->
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_back">Back</string>
    <string name="common_change">Change</string>
    <string name="common_order_entry">Order Entry</string>
    <string name="common_management">Management</string>
    <string name="common_time_tracking">Time Tracking</string>
    <string name="common_under_construction">Under Construction</string>
    <string name="common_acknowledged">Acknowledged</string>
    <string name="common_order_history">Order History</string>
    <string name="common_secret_functions">Secret Functions</string>
    <string name="common_user_profile">User Profile</string>
    <string name="common_lorem_ipsum_description">Lorem ipsum dolor sit amet, consectetur
        adipiscing elit. Integer commodo, nisi a rutrum dapibus, urna elit cursus mi, ut
        elementum lacus elit nec diam. Nullam laoreet dui id dui facilisis lacinia. Sed convallis
        feugiat ex, interdum tincidunt sapien consequat ut.</string>
    <string name="reports">Reports</string>

    <!-- Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="skip_login">Skip Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Main Dashboard -->
    <string name="order_entry_description">Browse the store inventory or sell products to the
        customer.</string>
    <string name="user_profile_description">View or edit your current user settings.</string>
    <string name="management_description">Manage your Point-of-Sale settings.</string>
    <string name="time_tracking_description">Clock in / out and view your recent activity.</string>
    <string name="order_history_description">Take a look at historical orders fulfilled on this
        Point-of-Sale.</string>
    <string name="secret_functions_description">Super secret area where you can perform special
        functions, like resetting the Demo Database.</string>
    <string name="placeholder_description">This is a temporary placeholder.</string>
    <string name="under_construction_alert_message">This area of the application is still
        under construction. Feel free to demonstrate your skills and build it.</string>
    <string name="main_dashboard_subtitle">Where would you like to go?</string>
    <string name="reports_description">View products popularity chart based on daily
        report.</string>

    <!-- User Profile -->
    <string name="user_profile_subtitle_format">Welcome %1$s.</string>
    <string name="user_profile_username">Username:</string>
    <string name="user_profile_email">Email:</string>
    <string name="user_profile_hours_week">Hours (Week):</string>

    <!-- Secret Functions -->
    <string name="secret_functions_subtitle">Top secret area.</string>
    <string name="secret_functions_reset_database">Reset Database</string>
    <string name="secret_functions_erase_cart">Erase Cart</string>
    <string name="secret_functions_alert_title">Function Executed</string>
    <string name="secret_functions_alert_button">Copy that.</string>
    <string name="secret_functions_alert_reset_database">Demo Database successfully reset
        (all original Demo data has been restored). This message will self-destruct.</string>
    <string name="secret_functions_alert_erase_cart">Your current Cart instance has been erase.
        It\'s almost as if your Cart never existed&#8230;</string>

    <!-- Order Entry -->
    <string name="order_entry_subtitle">Add products to the order.</string>
    <string name="order_entry_subtitle_checkout">Click the top-right icon to checkout.</string>

    <!-- Order History -->
    <string name="order_history_subtitle">Recent orders listed below.</string>
    <string name="order_history_alert_title">Not Implemented</string>
    <string name="order_history_alert_button">Sure.</string>
    <string name="order_history_alert_message">Order History functionality not implemented.
        Please stop clicking on the list items.</string>
    <string name="order_history_alert_warning_title">Stop it</string>
    <string name="order_history_alert_warning_button">Whatever.</string>
    <string name="order_history_alert_warning_message">You were warned not to click the list items.
        Administrators have been notified.</string>

    <!--Daily Report-->
    <string name="daily_report_subtitle">Daily Report</string>
    <string name="daily_report_product_popularity">Product Popularity</string>
    <string name="daily_report_progress_message">Loading chart</string>

    <!-- Checkout -->
    <string name="checkout_subtitle">How will you pay?</string>
    <string name="checkout_with_cash">With Cash</string>
    <string name="checkout_with_credit">With Credit</string>
    <string name="checkout_pay_cash">Pay (Cash)</string>
    <string name="checkout_pay_credit">Pay (Credit)</string>
    <string name="checkout_complete_title_message">Congratulations! Your payment was
        approved!</string>
    <string name="checkout_complete_subtitle">Order Complete!</string>
    <string name="checkout_complete_customer_message">Thanks for shopping with us - click the
        button below to return to the Order Entry screen.</string>
    <string name="checkout_complete_groovy">Groovy!</string>

    <!-- Payment Types -->
    <string name="credit">Credit</string>
    <string name="cash">Cash</string>

    <!-- Keypad -->
    <string name="keypad_1">1</string>
    <string name="keypad_2">2</string>
    <string name="keypad_3">3</string>
    <string name="keypad_4">4</string>
    <string name="keypad_5">5</string>
    <string name="keypad_6">6</string>
    <string name="keypad_7">7</string>
    <string name="keypad_8">8</string>
    <string name="keypad_9">9</string>
    <string name="keypad_00">00</string>
    <string name="keypad_0">0</string>

    <!-- Progress / Tasks -->
    <string-array name="progress_dialog_messages">
        <item>Crunching numbers&#8230;</item>
        <item>Evaluating data&#8230;</item>
        <item>Analyzing values&#8230;</item>
        <item>Running algorithms&#8230;</item>
        <item>Checking with Banks&#8230;</item>
        <item>Using Machine Learning&#8230;</item>
        <item>Counting beans&#8230;</item>
    </string-array>
</resources>
