<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.misc.SecretFunctionsActivity">

    <com.imobile3.groovypayments.ui.MainNavBar
        android:id="@+id/main_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:fadeScrollbars="false"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarFadeDuration="0"
        android:scrollbarSize="30dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_nav_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/dashboard_icon_bg_blue_light"
                android:padding="6dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_person"
                android:tint="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextView.Large.Bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:gravity="end"
                    android:text="@string/user_profile_username" />

                <TextView
                    android:id="@+id/label_username"
                    style="@style/TextView.Monospace.Bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_weight="1"
                    android:gravity="start"
                    tools:text="johndoe" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextView.Large.Bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:gravity="end"
                    android:text="@string/user_profile_email" />

                <TextView
                    android:id="@+id/label_email"
                    style="@style/TextView.Monospace.Bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_weight="1"
                    android:gravity="start"
                    tools:text="jdoe@gmail.com" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextView.Large.Bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:gravity="end"
                    android:text="@string/user_profile_hours_week" />

                <TextView
                    android:id="@+id/label_hours_week"
                    style="@style/TextView.Monospace.Bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_weight="1"
                    android:gravity="start"
                    tools:text="34.75" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>
